Fix hero section full-width display on mobile/tablet - remove 100vw overflow issues

--- a/frontend/home.css
+++ b/frontend/home.css
@@ -476,16 +476,11 @@ footer {
   }
 
   .hero {
-    margin: 15px 0;
+    margin: 0;
     min-height: 380px;
     border-radius: 0;
-    max-width: 100%;
-    width: 100vw;
-    position: relative;
-    left: 50%;
-    right: 50%;
-    margin-left: calc(-50vw + 0px);
-    margin-right: calc(-50vw + 0px);
+    width: 100%;
+    max-width: none;
   }
 
   .hero .overlay {
@@ -561,12 +556,9 @@ footer {
   .hero {
     min-height: 360px;
     margin: 0;
-    width: 100vw;
-    position: relative;
-    left: 50%;
-    right: 50%;
-    margin-left: calc(-50vw + 0px);
-    margin-right: calc(-50vw + 0px);
+    width: 100%;
+    max-width: none;
+    border-radius: 0;
   }
 
   .hero-content {
@@ -678,12 +670,8 @@ footer {
     min-height: 340px;
     margin: 0;
     border-radius: 0;
-    width: 100vw;
-    position: relative;
-    left: 50%;
-    right: 50%;
-    margin-left: calc(-50vw + 0px);
-    margin-right: calc(-50vw + 0px);
+    width: 100%;
+    max-width: none;
   }
 
   .hero-content {
